	PR 997 	* frags.c (frag_offset_fixed_p): New function. 	* frags.h (frag_offset_fixed_p): Declare. 	* expr.c (expr): Use frag_offset_fixed_p when simplifying subtraction. 	(resolve_expression): Likewise.